# tadeo-eCar-ws

./: .gitignore  DEVELOPMENT_LOG.md  README.md  TESTING_GUIDE.md  frames_2025-11-12_18.55.56.gv
documentacion/: README.md  modelo-matematico.md
documentacion/modelo-matematico/: README.md  cinematica.md  control.md  modelo-4ws.excalidraw  parametros.md
src/tadeocar_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/tadeocar_bringup/launch/: nav2_bringup.launch.py  navigation.launch.py  navigation_bringup.launch.py  save_map.launch.py  simulation.launch.py  slam_bringup.launch.py
src/tadeocar_control/: package.xml  setup.cfg  setup.py
src/tadeocar_control/config/: joint_velocity_controllers.yaml  ros2_controllers.yaml
src/tadeocar_control/launch/: control.launch.py  fourws_control.launch.py  xbox_control.launch.py
src/tadeocar_control/tadeocar_control/: cinematica.py  fourws_kinematics_node.py  web_control_node.py  xbox_control_node.py
src/tadeocar_control/web/: control.js  index.html
src/tadeocar_description/: CMakeLists.txt  package.xml
src/tadeocar_description/config/: tadeocar.rviz
src/tadeocar_description/launch/: complete_sim.launch.py  display.launch.py  gazebo.launch.py  sim_with_xbox.launch.py
src/tadeocar_description/models/tadeocar_v1/: model.config  model.sdf
src/tadeocar_description/models/tadeocar_v1/meshes/chassis/: chasis_base.dae
src/tadeocar_description/models/tadeocar_v1/meshes/wheels/: wheel.dae
src/tadeocar_description/urdf/: tadeocar.urdf  tadeocar_control.urdf.xacro  tadeocar_tf.urdf
src/tadeocar_description/worlds/: tadeocar.world
src/tadeocar_gazebo/: package.xml  setup.cfg  setup.py
src/tadeocar_gazebo/launch/: simulation.launch.py
src/tadeocar_gazebo/models/tadeocar_v1/: model.sdf
src/tadeocar_gazebo/models/tadeocar_v1/meshes/chassis/: chasis.dae
src/tadeocar_gazebo/tadeocar_gazebo/: odom_to_tf.py
src/tadeocar_gazebo/worlds/: empty.world  factory.world
src/tadeocar_navigation/: CMakeLists.txt  package.xml
src/tadeocar_navigation/config/: nav2_params.yaml  navigation.rviz  slam_params.yaml
src/tadeocar_navigation/launch/: navigation.launch.py  slam.launch.py
src/tadeocar_navigation/maps/: mapa.pgm  mapa.yaml
src/tadeocar_slam/: package.xml  setup.cfg  setup.py
src/tadeocar_slam/config/: slam_params.yaml
src/tadeocar_slam/launch/: save_map.launch.py  slam.launch.py
src/tadeocar_slam/rviz/: slam.rviz
